sumo/tests/traci/get_variable/MeMeDetector/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 0xa1: Get MeMeDetector Variable: unsupported variable specified
